<resources>
    <string name="app_name">LIBROG</string>

    <!--공통-->
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>

    <!--메뉴-->
    <string name="menu_home">홈</string>
    <string name="menu_history">독서기록</string>
    <string name="menu_add">기록추가</string>
    <string name="menu_flowerpot">화분관리</string>
    <string name="menu_mypage">프로필</string>

    <!--에러처리-->
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_email_hint">직접입력</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>

    <!-- 회원가입 -->
    <string name="signup">회원가입</string>
    <string name="signup_id_hint">아이디(이메일)</string>
    <string name="signup_email_hint">직접입력</string>
    <string name="signup_email_delimiter">\@</string>
    <string name="signup_name_hint">이름</string>
    <string name="signup_password_hint">비밀번호</string>
    <string name="signup_password_confirm_hint">비밀번호 확인</string>

    <!--홈 화면-->
    <string name="home_day_count">독서 %d일차</string>
    <string name="home_status_message">꾸준히 실천하고 계시군요!</string>
    <string name="home_pot_flower">해바라기</string>
    <string name="home_banner_title">최근 읽은 책</string>
    <string name="home_book_title">%s</string>
    <string name="home_book_writer">%s</string>
    <string name="home_book_date">%s</string>

    <!-- 화분관리 -->
    <string name="flowerpot_main_text">화분 관리</string>
    <string name="flowerpot_total">총 %d건</string>
    <string name="flowerpot_flower">라넌큘러스</string>
    <string name="flowerpot_date">%s ~ %s</string>
    <string name="flowerpot_record">기록된 권수: %d권</string>
    <string name="flowerpot_most_genre">가장 많이 읽은 장르: %s</string>

    <!-- 기록추가 -->
    <string name="addbook_main_text">기록 추가하기</string>
    <string name="addbook_search">책 검색하기</string>
    <string name="addbook_nobook">검색 결과가 없습니다.</string>
    <string name="addbook_insert">검색창에 책 제목을 입력해주세요</string>
    <string name="addbook_more">더보기</string>

    <!--기록추가 편집-->
    <string name="addbook_select_title">사피엔스</string>
    <string name="addbook_select_writer">유발 하라리</string>
    <string name="addbook_select_explain">"『사피엔스』는 중요한 순간을 살고 있는 우리에게 다가올 미래에 대해 어떤 전망이 있는지, 지금이 전망을 가져야 할 때라고 말한다."</string>
    <string name="addbook_select_rate_text">이 책의 별점</string>
    <string name="addbook_select_rate_n">%d / %d</string>
    <string name="addbook_select_line">인상 깊은 한 줄</string>
    <string name="addbook_select_review">독후감</string>
    <string name="addbook_select_finish">완료</string>

    <!-- splash -->
    <string name="splash_tip">Tip</string>
    <string name="splash_text">화분을 누르면 물을 줄 수 있어요.</string>


    <!-- 화분 상세정보 -->
    <string name="detail_flowerpot_main">화분 상세정보</string>
    <string name="detail_flowerpot_exp_text">%s의 성장치</string>
    <string name="detail_flowerpot_exp_num">%d / %d</string>
    <string name="detail_flowerpot_book_list">화분에 기록된 책</string>
    <string name="detail_flowerpot_no_book">화분에 책이 없습니다.</string>
    <string name="detail_flowerpot_delete">라넌큘러스 화분 삭제</string>
    <string name="detail_flowerpot_edit">화분에 기록된 책 편집</string>

    <!-- 화분추가 -->
    <string name="add_flowerpot_top_text">화분추가</string>
    <string name="add_flowerpot_unlocked">획득한 화분</string>
    <string name="add_flowerpot_locked">미획득 화분</string>
    <string name="add_flowerpot_name">꽃 이름</string>
    <string name="add_flowerpot_eng_name">꽃 영문 이름</string>
    <string name="add_flowerpot_blooming">예상 %d~%d개월</string>
    <string name="add_flowerpot_condition">잠금 해제 조건</string>
    <string name="add_flowerpot_status">NEW!</string>

    <!-- 획득한 화분 상세정보 페이지 -->
    <string name="detail_unlocked_select">선택하기</string>
    <string name="detail_unlocked_content">해바라기는 국화가에 속하는 일년생 초본식물로, 노란색이 인상적인 꽃 입니다. 해바라기는 풍시지리에서 금전운을 상징한다고 합니다. 해를 따라서 꽃이 움직이기 때문인지, 해바라기는 ‘일편단심’이라는 꽃말을 가지고 있습니다. 테스트용 예시 텍스트 입니다. 양쪽 공백 40입니다.</string>


    <!--프로필-->
    <string name="profile_pot">화분</string>
    <string name="profile_book">읽은 책</string>
    <string name="profile_rate">별점</string>
    <string name="profile_record_line">한 줄 기록</string>
    <string name="profile_record">독서록</string>


    <!-- 독서기록 상세 -->
    <string name="detail_history_top_text">상단 책 이름</string>
    <string name="detail_history_book_name">책 이름</string>
    <string name="detail_history_author_name">작가 이름</string>
    <string name="detail_history_description">책 설명</string>
    <string name="detail_history_rating_description">이 책의 별점</string>
    <string name="detail_history_rating">%d / %d</string>
    <string name="detail_history_quote">인상 깊은 한 줄</string>
    <string name="detail_history_contents">독후감</string>

    <!-- 독서기록 -->
    <string name="history_sort_recent">최근 기록 순</string>
    <string name="history_sort_rating">별점 높은 순</string>
    <string name="history_sort_title">제목 순</string>

    <!--회원가입-->
    <string name="consent_content">리브로그(이하 \'LIBROG\')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.\n
\n
○ 이 개인정보처리방침은 2022년 8월 20부터 적용됩니다.\n
\n
\n
제1조(개인정보의 처리 목적)\n
\n
리브로그(이하 \'LIBROG\')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.\n
\n
1. 홈페이지 회원가입 및 관리\n
\n
회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 각종 고지·통지 목적으로 개인정보를 처리합니다.\n
\n
\n
2. 재화 또는 서비스 제공\n
\n
서비스 제공을 목적으로 개인정보를 처리합니다.\n
\n
\n
3. 마케팅 및 광고에의 활용\n
\n
이벤트 및 광고성 정보 제공 및 참여기회 제공 , 서비스의 유효성 확인 등을 목적으로 개인정보를 처리합니다.\n
\n
\n
\n
\n
제2조(개인정보의 처리 및 보유 기간)\n
\n
① 리브로그은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.\n
\n
② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.\n
\n
1. 홈페이지 회원가입 및 관리\n
홈페이지 회원가입 및 관리와 관련한 개인정보는 수집.이용에 관한 동의일로부터 지체없이 파기까지 위 이용목적을 위하여 보유.이용됩니다.\n
보유근거 : 서비스 이용자 식별\n
관련법령 : 계약 또는 청약철회 등에 관한 기록 : 5년\n
예외사유 :\n
\n
\n
제3조(처리하는 개인정보의 항목)\n
\n
① 리브로그은(는) 다음의 개인정보 항목을 처리하고 있습니다.\n
\n
1. 홈페이지 회원가입 및 관리\n
필수항목 : 이메일, 비밀번호\n
선택항목 :\n
\n
\n
제4조(개인정보의 파기절차 및 파기방법)\n
\n
\n
① 리브로그은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.\n
\n
② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.\n
1. 법령 근거 :\n
2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜\n
\n
③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.\n
1. 파기절차\n
리브로그은(는) 파기 사유가 발생한 개인정보를 선정하고, 리브로그의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.\n
\n
2. 파기방법\n
\n
전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.\n
\n
\n
\n
제5조(정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항)\n
\n
\n
\n
① 정보주체는 리브로그에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다.\n
\n
② 제1항에 따른 권리 행사는리브로그에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 리브로그은(는) 이에 대해 지체 없이 조치하겠습니다.\n
\n
③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.\n
\n
④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.\n
\n
⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.\n
\n
⑥ 리브로그은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.\n
\n
\n
\n
제6조(개인정보의 안전성 확보조치에 관한 사항)\n
\n
리브로그은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.\n
\n
1. 개인정보의 암호화\n
이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.\n
\n
2. 개인정보에 대한 접근 제한\n
개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.\n
\n
\n
\n
\n
제7조(개인정보를 자동으로 수집하는 장치의 설치·운영 및 그 거부에 관한 사항)\n
\n
\n
\n
리브로그 은(는) 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용하지 않습니다.\n
\n
제8조 (개인정보 보호책임자에 관한 사항)\n
\n
① 리브로그 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.\n
\n
▶ 개인정보 보호책임자\n
성명 :librogmaster\n
직책 :팀장\n
직급 :팀장\n
연락처 : librogmaster@gamil.com,\n
※ 개인정보 보호 담당부서로 연결됩니다.\n
\n
▶ 개인정보 보호 담당부서\n
부서명 : LIBROG\n
담당자 : librogmaster\n
연락처 : librogmaster@gamil.com,\n
② 정보주체께서는 리브로그 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 리브로그 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.\n
\n
제9조(개인정보의 열람청구를 접수·처리하는 부서)\n
정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.\n
리브로그은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.\n
\n
▶ 개인정보 열람청구 접수·처리 부서\n
부서명 : LIBROG\n
담당자 : librogmaster\n
연락처 : librogmaster@gmail.com\n
\n
\n
제10조(정보주체의 권익침해에 대한 구제방법)\n
\n
\n
\n
정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.\n
\n
1. 개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)\n
2. 개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)\n
3. 대검찰청 : (국번없이) 1301 (www.spo.go.kr)\n
4. 경찰청 : (국번없이) 182 (ecrm.cyber.go.kr)\n
\n
「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.\n
\n
※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다.\n
\n
제11조(개인정보 처리방침 변경)\n
\n
\n
① 이 개인정보처리방침은 2022년 8월 20부터 적용됩니다.</string>
</resources>