<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:id="@+id/item_unlocked_flowerpot_cl"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/unlocked_fp_img_iv"
        android:padding="8dp"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/test_flower_img"
        android:background="@drawable/icon_flowerpot_img_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/unlocked_fp_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="@string/add_flowerpot_name"
        android:fontFamily="@font/pd_semibold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:letterSpacing="0.02"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/unlocked_fp_blooming_tv"
        app:layout_constraintStart_toEndOf="@id/unlocked_fp_img_iv"/>


    <TextView
        android:id="@+id/unlocked_fp_blooming_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_flowerpot_blooming"
        android:fontFamily="@font/pd_medium"
        android:textSize="13sp"
        android:textColor="@color/darker_gray"
        android:letterSpacing="0.02"
        app:layout_constraintTop_toBottomOf="@id/unlocked_fp_name_tv"
        app:layout_constraintStart_toStartOf="@id/unlocked_fp_name_tv"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/unlocked_fp_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_flowerpot_status"
        android:fontFamily="@font/pd_semibold"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>