<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="193dp"
    android:layout_height="138dp"
    android:layout_marginStart="9dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/item_home_book_frame_iv"
        android:layout_width="193dp"
        android:layout_height="128dp"
        android:background="@drawable/home_item_book_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/item_home_book_iv"
        android:layout_width="68dp"
        android:layout_height="101dp"
        android:src="@drawable/home_item_book2"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_home_book_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginStart="9dp"
        android:text="@string/home_book_title"
        android:textSize="14sp"
        android:ellipsize="end"
        android:textColor="@color/white"
        android:fontFamily="@font/pd_bold"
        android:lineSpacingExtra="16.8dp"
        app:layout_constraintStart_toEndOf="@+id/item_home_book_iv"
        app:layout_constraintTop_toTopOf="@+id/item_home_book_frame_iv"/>
    <TextView
        android:id="@+id/item_home_book_writer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="9dp"
        android:text="@string/home_book_writer"
        android:textSize="12sp"
        android:ellipsize="end"
        android:textColor="@color/white"
        android:fontFamily="@font/pd_regular"
        android:lineSpacingExtra="14.4dp"
        app:layout_constraintStart_toEndOf="@+id/item_home_book_iv"
        app:layout_constraintTop_toBottomOf="@+id/item_home_book_title_tv"
        />
    <TextView
        android:id="@+id/item_home_book_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="9dp"
        android:text="@string/home_book_date"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/pd_regular"
        android:lineSpacingExtra="13.2dp"
        android:letterSpacing="-0.01"
        app:layout_constraintStart_toEndOf="@+id/item_home_book_iv"
        app:layout_constraintTop_toBottomOf="@+id/item_home_book_writer_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>